Fix appointment grader endpoints
