# storage/api-docs/api-docs.json
@@ -6,28 +6,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/v1/appointments/health": {
-            "get": {
-                "tags": [
-                    "Appointments"
-                ],
-                "summary": "Memeriksa status Appointment Service",
-                "operationId": "appointmentHealth",
-                "responses": {
-                    "200": {
-                        "description": "Appointment Service is running"
-                    },
-                    "401": {
-                        "description": "Unauthorized. Invalid or missing API Key."
-                    }
-                },
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ]
-            }
-        },
         "/api/v1/appointments": {
             "get": {
                 "tags": [
@@ -62,17 +40,10 @@
                 "summary": "Membuat jadwal konsultasi dan booking pasien baru",
                 "operationId": "542bdcdca4c0746fc71e97148e6d0a41",
                 "requestBody": {
-                    "required": true,
+                    "required": false,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "patient_name",
-                                    "doctor_name",
-                                    "specialization",
-                                    "appointment_date",
-                                    "appointment_time"
-                                ],
                                 "properties": {
                                     "patient_name": {
                                         "type": "string",
@@ -111,9 +82,6 @@
                     },
                     "401": {
                         "description": "Unauthorized. Invalid or missing API Key."
-                    },
-                    "422": {
-                        "description": "Validation error"
                     }
                 },
                 "security": [
